# accounting-assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: barun-project-format.md  releasing.md
public/: manifest.webmanifest
scripts/: generate-service-worker.mjs  set-version.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppUpdater.tsx  MoneyInput.test.tsx  MoneyInput.tsx  ProjectOnboarding.test.tsx  ProjectOnboarding.tsx
src/lib/: accounting.test.ts  accounting.ts  browser-project-store.test.ts  browser-project-store.ts  desktop.ts  excel-export.test.ts  excel-export.ts  ocr.test.ts  ocr.ts  pdf-to-images.test.ts  pdf-to-images.ts  project-package.test.ts  project-package.ts  receipt-book.test.ts  receipt-book.ts  receipt-docx.test.ts  receipt-docx.ts  receipt-pdf.ts
website/: guide.css  guide.html  guide.js  index.html  site.js  styles.css
