[package]
name = "accounting-assistant"
version = "0.1.0"
description = "로컬 아웃리치 회계·영수증철 도우미"
authors = ["Accounting Assistant"]
edition = "2021"

[lib]
name = "accounting_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
